<resources>
    <string name="app_name">DailyAnswer</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_answer">答题</string>
    <string name="title_discuss">讨论</string>
    <string name="title_setting">个人中心</string>
    <string name="title_activity_answer_question">AnswerQuestionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="question_type1">Java</string>
    <string name="question_type2">C</string>
    <string name="question_type3">PHP</string>
    <string name="question_type4">Python</string>
    <string name="question_type5">Android</string>
    <string name="question_type6">数据结构</string>
    <string name="question_type7">算法</string>
</resources>
